# longboxes

./: .dockerignore  .env.example  .git-blame-ignore-revs  .gitignore  Dockerfile  README.md  THIRD-PARTY-NOTICES.md  alembic.ini  code-review-findings.md  docker-compose.yml  justfile  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_users.py  0003_files_and_locations.py  0004_cv_cache.py  0005_file_matches.py  0006_file_cover_metadata.py  0007_local_entities_and_supplements.py  0008_local_volume_description.py  0009_volume_reading_direction.py  0010_read_progress.py  0011_user_track_reading_progress.py  0012_cv_issue_site_scraped_at.py  0013_cv_character_volumes.py  0014_cv_volume_themes.py  0015_file_errors.py  0016_file_interior_metadata.py
app/: config.py  db.py  main.py  redis_client.py  templates_env.py  worker.py
app/admin/: __init__.py  routes.py
app/archives/: __init__.py  base.py  cbr.py  cbz.py  comicbox_reader.py  comicinfo.py  cover_image.py  metroninfo.py
app/auth/: __init__.py  dependencies.py  passwords.py  routes.py  sessions.py
app/comicvine/: __init__.py  cache.py  client.py  errors.py  pacer.py  rate_limit.py  scrape.py
app/jobs/: __init__.py  match_file.py  noop.py  queue_status.py  revalidate.py  scan.py  scrape.py
app/library_browse/: __init__.py  routes.py
app/matcher/: __init__.py  filename.py  pipeline.py
app/models/: __init__.py  cv.py  file.py  file_match.py  local.py  read_progress.py  settings.py  user.py
app/reader/: __init__.py  routes.py
app/review/: __init__.py  routes.py
app/scanner/: __init__.py  hashing.py  (+2 more)
deploy/: .env.example  docker-compose.yml
design/: demo-deployment-plan.md  kapowarr-integration-api.md  phase-10-cover-matching.md  phase-11-local-metadata.md  phase-6-reader.md  phase-8-metadata-sync.md  phase-9-ai-enrichment.md
docs/: .gitignore  README.md  astro.config.mjs  package-lock.json  package.json  wrangler.jsonc
tests/: conftest.py  test_admin_cv.py  test_archives.py  test_archives_parity.py  test_auth.py  test_comicinfo.py  test_comicvine_scrape.py  test_cover_image.py  test_cv_cache.py  test_cv_client.py  test_cv_description.py  test_cv_helpers.py  test_cv_pacer.py  test_duplicates.py  test_file_errors.py  test_filename.py  test_health.py  test_library_routes.py  test_library_service.py  test_match_enqueue_order.py  test_matcher.py  test_matcher_helpers.py  test_queue_status.py  test_reader.py  test_reader_direction.py  test_reader_progress.py  test_revalidate.py  test_review_routes.py  test_scanner.py  test_search_routes.py  test_search_service.py  test_worker_queues.py
(+116 files in other folders)
